# tonel-smalltalk-parser

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pymarkdown  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  example_usage.py  pyproject.toml
.github/workflows/: test.yml
doc/: parsing-challenges.md  tonel-and-smalltalk-bnf.md
src/tonel_smalltalk_linter/: __init__.py  cli.py  linter.py
src/tonel_smalltalk_parser/: __init__.py  base_parser.py  bracket_parser.py  cli.py  smalltalk_parser.py  tonel_full_parser.py  tonel_parser.py
tests/: test_ansi_smalltalk_features.py  test_cli.py  test_sample_data.py  test_smalltalk_parser.py  test_tonel_full_parser.py  test_tonel_linter.py  test_tonel_parser.py
