[project]
name = "tonel-smalltalk-parser"
version = "0.1.2"
description = "A Python library for parsing Tonel-formatted Smalltalk source code with comprehensive BNF grammar definitions"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Masashi Umezawa", email = "ume@softumeya.com" }
]
keywords = ["tonel", "smalltalk", "parser", "bnf", "grammar", "ast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
validate-tonel = "tonel_smalltalk_parser.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.7.0",
    "mdformat>=0.7.17",
    "mdformat-gfm>=0.3.5",
    "mdformat-frontmatter>=2.0.1",
    "mdformat-tables>=0.4.1",
    "pymarkdownlnt>=0.9.13",
    "pre-commit>=4.0.1",
]

[project.urls]
Homepage = "https://github.com/mumez/tonel-smalltalk-parser"
Repository = "https://github.com/mumez/tonel-smalltalk-parser"
Issues = "https://github.com/mumez/tonel-smalltalk-parser/issues"
Documentation = "https://github.com/mumez/tonel-smalltalk-parser/blob/main/doc/tonel-and-smalltalk-bnf.md"

[tool.uv]
# Include dev dependencies in the default environment for CI/development
dev-dependencies = [
    "pytest>=8.4.1",
    "ruff>=0.7.0",
    "mdformat>=0.7.17",
    "mdformat-gfm>=0.3.5",
    "mdformat-frontmatter>=2.0.1",
    "mdformat-tables>=0.4.1",
    "pymarkdownlnt>=0.9.13",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10+
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# Other useful rulesets: I (isort), N (pep8-naming), UP (pyupgrade), B (flake8-bugbear)
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH", "D", "RUF"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Disable some docstring rules that are too strict for this project
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
# Group imports by type
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.mdformat]
# Wrap lines at 88 characters (same as ruff)
wrap = 88
# Number of spaces per list level
list_number_width = 2
# Convert tabs to spaces
end_of_line = "lf"

[tool.pymarkdown]
# Configure pymarkdown to use 88-character line length (matching ruff and mdformat)
plugins.md013.line_length = 88
